Sat Aug 25 09:00:28 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/TP_Reactor.cpp:
	* ace/TP_Reactor.h (ACE_TP_Reactor): Fixed  a warning in KCC
	  builds.  

Sat Aug 25 08:42:57 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Configuration_Import_Export.cpp: Fixed warnings with g++. I
	  am not sure how this fix will be accepted on different
	  compilers.  Things are always dicy when you want to delete a
	  void *. 

Fri Aug 24 23:29:09 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Added File_IO test to our daily builds. 

Fri Aug 24 23:12:15 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/WFMO_Reactor.h: 
	* ace/WFMO_Reactor.cpp (dispatch_notify): Fixed a compile error on
	  MSVC.  

Fri Aug 24 23:07:42 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Configuration_Import_Export.cpp: Fixed a compile error with
	  g++. 

Fri Aug 24 21:55:00 2001  Craig Rodrigues  <crodrigu@bbn.com>

        * ace/QoS/QoS_Session_Impl.cpp:
          Check for null parameters in rsvp_callback().
          Thanks to Yamuna Krishnamurthy <yamuna@cs.wustl.edu>. 

Fri Aug 24 20:32:39 2001  Steve Huston  <shuston@riverace.com>

        * tests/MEM_Stream_Test.cpp: Changed this test to use multiple
          processes on any platform without ACE_LACKS_FORK. It actually
          could be broader than this if desired. This is motivated by the
          fact that HP-UX can't mmap() (the call underlying ACE_MEM_IO)
          the same file more than once in the same process. With this,
          MEM_Stream_Test goes a lot better on HP-UX, though not perfectly
          yet.

Fri Aug 24 16:54:02 2001  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/SSL_SOCK_Stream.h (recv_i):

	  Added a timeout parameter.  See below for details.

	* ace/SSL/SSL_SOCK_Stream.i (recv_i):

	  Perform an SSL_read() before attempting to block on select()
	  with a timeout.  OpenSSL may buffer more data than requested